[gd_scene load_steps=5 format=4 uid="uid://bmuoxdjge2ld7"]

[ext_resource type="Texture2D" uid="uid://bw8n2ym8kax7w" path="res://assets/terrain/testing_room.png" id="1_26bc6"]
[ext_resource type="Script" uid="uid://bjjnpc7jj7j1u" path="res://assets/scripts/Guis/character_select/character_tester.gd" id="1_yu1b6"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_yu1b6"]
texture = ExtResource("1_26bc6")
texture_region_size = Vector2i(32, 32)
0:0/0 = 0
0:0/0/terrain_set = 0
0:1/next_alternative_id = 2
0:1/0 = 0
0:1/0/terrain_set = 0
0:1/0/terrain = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:0/next_alternative_id = 2
1:0/0 = 0
1:0/0/terrain_set = 0
1:0/0/terrain = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)
1:1/0 = 0
1:1/0/terrain_set = 0
1:1/0/terrain = 0
1:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-16, -16, 16, -16, 16, 16, -16, 16)

[sub_resource type="TileSet" id="TileSet_d84ku"]
tile_size = Vector2i(32, 32)
physics_layer_0/collision_layer = 1
physics_layer_0/collision_mask = 0
terrain_set_0/mode = 0
terrain_set_0/terrain_0/name = "Random"
terrain_set_0/terrain_0/color = Color(0.5, 0.34375, 0.25, 1)
sources/1 = SubResource("TileSetAtlasSource_yu1b6")

[node name="CharacterTester" type="PanelContainer"]
custom_minimum_size = Vector2(190, 170)
offset_right = 128.0
offset_bottom = 128.0
script = ExtResource("1_yu1b6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="SubViewportContainer" type="SubViewportContainer" parent="MarginContainer"]
clip_contents = true
layout_mode = 2

[node name="Main" type="SubViewport" parent="MarginContainer/SubViewportContainer"]
handle_input_locally = false
size = Vector2i(180, 160)
render_target_update_mode = 4

[node name="TestCamera" type="Camera2D" parent="MarginContainer/SubViewportContainer/Main"]

[node name="SpawnPos" type="Marker2D" parent="MarginContainer/SubViewportContainer/Main"]
position = Vector2(339, 523)

[node name="TestMap" type="TileMapLayer" parent="MarginContainer/SubViewportContainer/Main"]
position = Vector2(5, 5)
tile_map_data = PackedByteArray("AAAYABEAAQABAAAAAAAYABAAAQABAAEAAAAYAA8AAQABAAAAAAAYAA4AAQABAAEAAAAYAA0AAQABAAEAAAAYAAwAAQABAAEAAAAYAAsAAQAAAAEAAAAYAAoAAQAAAAEAAAAYAAkAAQABAAEAAAAYAAgAAQABAAAAAAAYAAcAAQABAAEAAAAYAAYAAQABAAAAAAAYAAUAAQAAAAEAAAAYAAQAAQAAAAEAAAAYAAMAAQABAAAAAAAYAAIAAQABAAEAAAAYAAEAAQABAAEAAAAYAAAAAQABAAAAAAAYAP//AQABAAAAAAAXAP//AQAAAAEAAAAWAP//AQAAAAEAAAAVAP//AQAAAAEAAAAUAP//AQABAAAAAAATAP//AQAAAAEAAAASAP//AQABAAAAAAARAP//AQABAAEAAAAQAP//AQABAAAAAAAPAP//AQABAAAAAAAOAP//AQABAAAAAAANAP//AQAAAAEAAAAMAP//AQABAAEAAAALAP//AQAAAAEAAAAKAP//AQAAAAEAAAAJAP//AQABAAAAAAAIAP//AQABAAEAAAAHAP//AQABAAAAAAAGAP//AQABAAEAAAAFAP//AQAAAAEAAAAEAP//AQABAAAAAAADAP//AQAAAAEAAAACAP//AQABAAAAAAABAP//AQABAAAAAAAAAP//AQABAAAAAAD//xEAAQAAAAEAAAD//xAAAQABAAEAAAD//w8AAQABAAEAAAD//w4AAQABAAAAAAD//w0AAQAAAAEAAAD//wwAAQAAAAEAAAD//wsAAQAAAAEAAAD//woAAQABAAAAAAD//wkAAQABAAAAAAD//wgAAQAAAAEAAAD//wcAAQAAAAEAAAD//wYAAQAAAAEAAAD//wUAAQABAAEAAAD//wQAAQAAAAEAAAD//wMAAQABAAAAAAD//wIAAQABAAAAAAD//wEAAQAAAAEAAAD//wAAAQABAAAAAAD/////AQABAAAAAAAXABEAAQABAAAAAAAWABEAAQAAAAEAAAAVABEAAQAAAAEAAAAUABEAAQABAAAAAAATABEAAQABAAEAAAASABEAAQABAAEAAAARABEAAQAAAAEAAAAQABEAAQABAAEAAAAPABEAAQAAAAEAAAAOABEAAQAAAAEAAAANABEAAQABAAEAAAAMABEAAQABAAEAAAALABEAAQABAAAAAAAKABEAAQABAAAAAAAJABEAAQABAAEAAAAIABEAAQABAAEAAAAHABEAAQAAAAEAAAAGABEAAQABAAEAAAAFABEAAQABAAEAAAAEABEAAQABAAEAAAADABEAAQABAAAAAAACABEAAQABAAEAAAABABEAAQABAAAAAAAAABEAAQAAAAEAAAAIABAAAQABAAEAAAAIAA8AAQAAAAEAAAAIAA4AAQABAAAAAAAHABAAAQAAAAEAAAAHAA8AAQABAAAAAAAHAA4AAQABAAEAAAARAA0AAQAAAAEAAAARAAwAAQABAAEAAAARAAsAAQABAAEAAAARAAoAAQAAAAEAAAARAAkAAQABAAAAAAARAAgAAQAAAAEAAAARAAcAAQABAAEAAAARAAYAAQAAAAEAAAARAAUAAQABAAEAAAARAAQAAQABAAEAAAARAAMAAQABAAAAAAARAAIAAQABAAEAAAARAAEAAQABAAEAAAARAAAAAQABAAEAAAAXABAAAQABAAAAAAAXAA8AAQABAAEAAAAXAA4AAQABAAAAAAAXAA0AAQAAAAEAAAAXAAwAAQABAAAAAAAXAAsAAQABAAEAAAAXAAoAAQAAAAEAAAAXAAkAAQABAAEAAAAXAAgAAQAAAAEAAAAXAAcAAQAAAAEAAAAXAAYAAQAAAAEAAAAXAAUAAQABAAEAAAAXAAQAAQABAAAAAAAXAAMAAQAAAAEAAAAXAAIAAQAAAAEAAAAXAAEAAQAAAAEAAAAXAAAAAQABAAEAAAASAA0AAQABAAAAAAATAAoAAQAAAAEAAAATAAkAAQABAAEAAAATAAgAAQABAAEAAAATAAcAAQABAAAAAAATAAYAAQABAAAAAAATAAUAAQABAAAAAAAUAAoAAQABAAAAAAAUAAkAAQABAAEAAAAUAAgAAQABAAEAAAAUAAcAAQABAAAAAAAUAAYAAQAAAAEAAAAUAAUAAQAAAAEAAAAWAA0AAQABAAAAAAAUABAAAQABAAEAAAAUAA8AAQABAAAAAAAWABAAAQABAAAAAAAWAA8AAQAAAAEAAAAVABAAAQABAAAAAAAVAA8AAQAAAAEAAAANABAAAQAAAAEAAAANAA8AAQAAAAEAAAANAA4AAQABAAEAAAANAA0AAQAAAAEAAAANAAwAAQABAAAAAAAMABAAAQAAAAEAAAAMAA8AAQABAAEAAAAMAA4AAQAAAAEAAAAMAA0AAQABAAEAAAAMAAwAAQAAAAEAAAAOABAAAQAAAAEAAAAOAA8AAQABAAEAAAAOAA4AAQAAAAEAAAAOAA0AAQAAAAEAAAAOAAwAAQABAAEAAAALAAgAAQABAAEAAAAKAAgAAQABAAEAAAAJAAgAAQAAAAEAAAAIAAgAAQABAAEAAAAHAAgAAQABAAAAAAAGAAgAAQABAAAAAAAFAAgAAQABAAAAAAAEAAgAAQABAAAAAAADAAgAAQAAAAEAAAALAAYAAQABAAAAAAAKAAYAAQABAAAAAAAJAAYAAQABAAAAAAAIAAYAAQABAAAAAAAHAAYAAQABAAAAAAAGAAYAAQAAAAEAAAAFAAYAAQAAAAEAAAAEAAYAAQABAAEAAAADAAYAAQAAAAEAAAALAAMAAQAAAAEAAAAKAAMAAQABAAEAAAAJAAMAAQAAAAEAAAAIAAMAAQAAAAEAAAAHAAMAAQAAAAEAAAAGAAMAAQABAAAAAAAFAAMAAQABAAAAAAAEAAMAAQABAAEAAAADAAMAAQAAAAEAAAADAAsAAQABAAAAAAADAAoAAQABAAEAAAADAAkAAQABAAAAAAA=")
tile_set = SubResource("TileSet_d84ku")
